Stretch: Fixed navigation and opacity

--- a/css/index.css
+++ b/css/index.css
@@ -170,9 +170,15 @@ p {
 }
 .nav {
   max-width: 1000px;
-  background: #F6F6F6;
+  background: rgba(246, 246, 246, 0.8);
   border-bottom: 4px solid #F1F1F1;
   color: #23293B;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  margin: 0 auto;
 }
 .nav h1 {
   font-size: 4rem;
@@ -205,6 +211,9 @@ footer {
   footer {
     margin-top: 8px;
   }
+}
+.home {
+  margin-top: 100px;
 }
 .home .intro h2 {
   padding: 15px 15px;
